[UPDATE] 펀딩등록요청 crowdFundingRegistration.html

--- a/src/main/resources/templates/thyme/crowdFundingRegistration.html
+++ b/src/main/resources/templates/thyme/crowdFundingRegistration.html
@@ -6,8 +6,11 @@
 <title>펀딩 등록 요청</title>
 </head>
 <body>
-<br><h1 align="center">펀딩 등록 요청</h1><br>
+
+<header th:include="fragment/header :: headerFragment"></header>
+
 <div class="container">
+<br><h1 align="center">펀딩 등록 요청</h1><br>
   <div class="row">
     <div class="col">
       <p>등록 요청이 완료되었습니다.</p>
@@ -18,5 +21,7 @@
     <hr>
   </div>
 </div>
+
+<footer th:include="fragment/footer :: footerFragment"></footer>
 </body>
 </html>
