--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -14,6 +14,7 @@
 				<a th:if="${session.account != null}" th:href="@{/logout.do}">logout</a>
 				<a th:if="${session.account != null}" th:href="@{/cart.do}">cart</a>
 				<a th:if="${session.account != null}" th:href="@{/auction/viewCart.do}">auction cart</a>
+				<a th:if="${session.account != null}" th:href="@{/auction/history}">auction history</a>
 				<a th:if="${session.account != null}" th:href="@{/mypage.do}">mypage</a>
 				
 				<!-- 세션 확인용 -->
