--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -23,7 +23,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="" th:href="@{/personalDeal/list}">PersonalDeal</a>
+				<a href="" th:href="@{/personalDeal}">PersonalDeal</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif" />&nbsp&nbsp
 				<a href="" th:href="@{/auction/recently}">Auction</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif"/>&nbsp&nbsp
