--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -14,11 +14,10 @@
 				<a th:if="${session.account != null}" th:href="@{/logout}">logout</a>
 				<a th:if="${session.account != null}" th:href="@{/cart}">cart</a>
         		<a th:if="${session.account != null}" th:href="@{/auction/viewCart.do}">auction cart</a>
-        <a th:if="${session.account != null}" th:href="@{/auction/history}">auction history</a>
 				<a th:if="${session.account != null}" th:href="@{/mypage}">mypage</a>
 				
 				<!-- 세션 확인용 -->
-				<!-- <a th:if="${session != null}" th:href="@{/sessionCheck}">checkSession(log확인)</a>-->
+				<a th:if="${session != null}" th:href="@{/sessionCheck}">checkSession(log확인)</a>
 			</td>
 		</tr>
 		<tr>
