[UPDATE] 중고거래 목록, 상세보기, 정렬(최신순, 조회순, 최저가순, 최고가순), 검색, 등록, 수정

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -22,7 +22,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="" th:href="@{/personalDeal}">PersonalDeal</a>
+				<a href="" th:href="@{/personalDeal/newest}">PersonalDeal</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif" />&nbsp&nbsp
 				<a href="" th:href="@{/auction/recently}">Auction</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif"/>&nbsp&nbsp
