--- a/src/main/resources/templates/thyme/Home.html
+++ b/src/main/resources/templates/thyme/Home.html
@@ -15,21 +15,22 @@
 
 <div align="center" layout:fragment="content">
 	<h3>PersonalDeal</h3>
-	<!-- <div th:unless="${#lists.isEmpty(personalDealItems)}">
+	<div th:unless="${#lists.isEmpty(personalDealItems)}">
 		<div th:each="personalDealItem : ${personalDealItems}">
 			<table>
 				<tr>
-					<td rowspan="3" th:text="${crowdFundingItem.item.img}"></td>
+					<!--<td rowspan="4"><img th:src="@{'/upload/' + ${personalDealItem.img}}" width="130" height="100"/></td>-->
+					<td th:text="${personalDealItem.title}"></td>
 				</tr>
 				<tr>
-					<td th:text="${personalDealItem.shortInfo}"></td>
+					<td th:text="'제목: '+${personalDealItem.item.title}"></td>
 				</tr>
 				<tr>
-					<td th:text="((${crowdFundingItem.currentSponsoredAmount} / ${crowdFundingItem.targetAmount}) * 100) + '% 달성'">~% 달성</td>
+					<td th:text="'판매금액: '+${personalDealItem.price}+'원'"></td>
 				</tr>
 			</table>
 		</div>
-	</div> -->
+	</div>
 	
 	<h3>Auction</h3>
 	<div th:unless="${#lists.isEmpty(auctionItems)}">
