--- a/src/main/resources/templates/thyme/AuctionCart.html
+++ b/src/main/resources/templates/thyme/AuctionCart.html
@@ -4,7 +4,7 @@
       layout:decorator="layout/default_layout">
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-<title>경매 장바구니</title>
+<title>경매 관심물품</title>
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
 	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
@@ -16,7 +16,7 @@
 </th:block>
 
 <div layout:fragment="content">
-	<br><h1 align="center">장바구니</h1><br>
+	<br><h1 align="center">경매 관심물품</h1><br>
 	<br>
 	<table th:unless="${#lists.isEmpty(cart.cartItemList.pageList)}" class="table table-bordered">
 		<thead>
