--- a/src/main/resources/templates/thyme/crowdFundingRegiHistory.html
+++ b/src/main/resources/templates/thyme/crowdFundingRegiHistory.html
@@ -22,7 +22,7 @@
 		<th>펀딩 간단 설명</th>
 	</tr>
 	<tr th:each="crowdFundingItem : ${myCrowdFundingItemList}">
-		<td th:text="${crowdFundingItem.item.img}">이미지</td>
+		<td><img th:src="@{'/upload/' + ${crowdFundingItem.item.img}}" alt="대표 사진" width="200" height="200" /></td>
 		<td th:text="${crowdFundingItem.shortInfo}">펀딩 간단 설명</td>
 		<td>
 			<form action="" th:action="@{'/crowdFunding/update/{crowdFundingId}'(crowdFundingId=${crowdFundingItem.crowdFundingId})}" method="get">
