--- a/src/main/resources/templates/thyme/PersonalDealItemView.html
+++ b/src/main/resources/templates/thyme/PersonalDealItemView.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>중고물품 정보 화면</title>
-</head>
-<body>
-<br><h1 align="center">중고물품 상세정보 화면</h1><br>
-<div class="container">
-  <div class="row">
-  	<hr>
-    <h1><span th:text="${personalDealItem.item.title}"> - </span><span th:text="${personalDealItem.title}"></span></h1>
-  </div>	
-  <div align="center">
-    <div class="col">
-     <!--<p rowspan="7"><img th:src="${personalDealItem.item.img}"/></p>-->
-    </div>
-    <div class="col">
-      <p>설명: <span th:text="${personalDealItem.item.description}"></span></p>
-      <p>카테고리: <span th:text="${parentCatId} + '>' + ${childCatId}"></span></p>
-      <p><b>판매희망가: <span th:text="${personalDealItem.price}+'원'"></span></b><br><br></p>
-      <p>거래진행 상태: <span th:text="${personalDealItem.dealStatus}"></span></p>
-      <p>상품 상태: <span th:text="${personalDealItem.productStatus}"></span></p>
-      <p>배송비: <span th:text="${personalDealItem.item.shippingFee}+'원'"></span></p>
-      <p>판매자 아이디: <span th:text="${personalDealItem.item.userId}"></span></p>
-      <p>거래지역: <span th:text="${personalDealItem.location}"></span></p>
-      <p>조회수: <span th:text="${personalDealItem.item.views}"></span></p>
-      
-      <form action="#" th:action="@{/personalDeal/order/{personalDealId}(personalDealId=${personalDealItem.personalDealId})}" method="get">
-      	<input type="submit"  class="btn btn-primary btn-lg" value="구매하기" >
-      </form>
-    </div>
-    <a href="#" th:href="@{/personalDeal/newest}">중고물품 목록</a>&nbsp;
-    <a href="#" th:href="@{/personalDeal/addItemToCart.do(personalDealId=${personalDealItem.personalDealId}, itemId=${personalDealItem.itemId}, img=${personalDealItem.item.img})}">장바구니 넣기</a>&nbsp;
-  </div>
-</div>
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
+
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
+
+<div align="center" layout:fragment="content">
+	<div class="container">
+	  <div class="row">
+	  	<hr>
+	    <h1><span th:text="${personalDealItem.item.title}"> - </span><span th:text="${personalDealItem.title}"></span></h1>
+	  </div>	
+	  <div align="center">
+	    <div class="col">
+	     <!--<p rowspan="7"><img th:src="${personalDealItem.item.img}"/></p>-->
+	    </div>
+	    <div class="col">
+	      <p>설명: <span th:text="${personalDealItem.item.description}"></span></p>
+	      <p>카테고리: <span th:text="${parentCatId} + '>' + ${childCatId}"></span></p>
+	      <p><b>판매희망가: <span th:text="${personalDealItem.price}+'원'"></span></b><br><br></p>
+	      <p>거래진행 상태: <span th:text="${personalDealItem.dealStatus}"></span></p>
+	      <p>상품 상태: <span th:text="${personalDealItem.productStatus}"></span></p>
+	      <p>배송비: <span th:text="${personalDealItem.item.shippingFee}+'원'"></span></p>
+	      <p>판매자 아이디: <span th:text="${personalDealItem.item.userId}"></span></p>
+	      <p>거래지역: <span th:text="${personalDealItem.location}"></span></p>
+	      <p>조회수: <span th:text="${personalDealItem.item.views}"></span></p>
+	      
+	      <form action="#" th:action="@{/personalDeal/order/{personalDealId}(personalDealId=${personalDealItem.personalDealId})}" method="get">
+	      	<input type="submit"  class="btn btn-primary btn-lg" value="구매하기" >
+	      </form>
+	    </div>
+	    <a href="#" th:href="@{/personalDeal/newest}">중고물품 목록</a>&nbsp;
+	    <a href="#" th:href="@{/personalDeal/addItemToCart.do(personalDealId=${personalDealItem.personalDealId}, itemId=${personalDealItem.itemId}, img=${personalDealItem.item.img})}">장바구니 넣기</a>&nbsp;
+	  </div>
+	</div>
+	</div>
 </html>
