--- a/src/main/resources/templates/thyme/ViewOrderFunding.html
+++ b/src/main/resources/templates/thyme/ViewOrderFunding.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>JPetStore</title>
-</head>
-<body>
-	<header th:include="fragment/header :: headerFragment"></header>
-	
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
+
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
+
+<div align="center" layout:fragment="content">
 	<div class="container">
 	<form action="" th:action="@{/crowdFunding/fund}" th:object="${fundingForm}" method="post" enctype="multipart/form-data">
 	<table align="center">
@@ -72,8 +81,5 @@
 	</table>
 	</form>
 	</div>
-	
-	<footer th:include="fragment/footer :: footerFragment"></footer>
-	
-</body>
+</div>
 </html>
