--- a/src/main/resources/templates/thyme/crowdFundingHistory.html
+++ b/src/main/resources/templates/thyme/crowdFundingHistory.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>펀딩 내역</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
 
-<header th:include="fragment/header :: headerFragment"></header>
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
 
-<div class="container">
-<br><h1 align="center">펀딩 내역</h1><br>
-<table th:if="${#lists.isEmpty(myLists)}">
-	<h2>조회결과가 없습니다.</h2>
-</table>
-
-<table th:unless="${#lists.isEmpty(myLists)}">
-	<tr>
-		<th>펀딩 일시</th>
-		<th>펀딩 아이템 제목</th>
-		<th>펀딩 마감일</th>
-		<th>상태</th>
-	</tr>
-	<tr th:each="myList : ${myLists}">
-		<form action="" th:action="@{/crowdFunding/myFundingCheckout/cancel}" method="post" enctype="multipart/form-data">
-		<td th:text="${myList.crowdFundingItem.startDate}">펀딩 일시</td>
-		<td th:text="${myList.crowdFundingItem.item.title}">펀딩아이템 제목</td>
-		<td th:text="${myList.crowdFundingItem.closingDate}">펀딩 마감일</td>
-		<td th:text="${myList.crowdFundingItem.status}">상태</td>
-		<td>
-			<input type="hidden" th:name="crowdFundingId" th:value="${myList.crowdFundingItem.crowdFundingId}">
-			<input type="hidden" th:name="orderId" th:value="${myList.orders.orderId}">
-			<input type="hidden" th:name="lineNum" th:value="${myList.orders.lineNum}">
-			<input type="submit" value="펀딩 취소" class="btn btn-primary float-right">
-		</td>
-		</form>
-	</tr>
-</table>
+<div align="center" layout:fragment="content">
+	<div class="container">
+	<br><h1 align="center">펀딩 내역</h1><br>
+	<table th:if="${#lists.isEmpty(myLists)}">
+		<h2>조회결과가 없습니다.</h2>
+	</table>
+	
+	<table th:unless="${#lists.isEmpty(myLists)}">
+		<tr>
+			<th>펀딩 일시</th>
+			<th>펀딩 아이템 제목</th>
+			<th>펀딩 마감일</th>
+			<th>상태</th>
+		</tr>
+		<tr th:each="myList : ${myLists}">
+			<form action="" th:action="@{/crowdFunding/myFundingCheckout/cancel}" method="post" enctype="multipart/form-data">
+			<td th:text="${myList.crowdFundingItem.startDate}">펀딩 일시</td>
+			<td th:text="${myList.crowdFundingItem.item.title}">펀딩아이템 제목</td>
+			<td th:text="${myList.crowdFundingItem.closingDate}">펀딩 마감일</td>
+			<td th:text="${myList.crowdFundingItem.status}">상태</td>
+			<td>
+				<input type="hidden" th:name="crowdFundingId" th:value="${myList.crowdFundingItem.crowdFundingId}">
+				<input type="hidden" th:name="orderId" th:value="${myList.orders.orderId}">
+				<input type="hidden" th:name="lineNum" th:value="${myList.orders.lineNum}">
+				<input type="submit" value="펀딩 취소" class="btn btn-primary float-right">
+			</td>
+			</form>
+		</tr>
+	</table>
+	</div>
 </div>
-
-<footer th:include="fragment/footer :: footerFragment"></footer>
-
-</body>
 </html>
