--- a/src/main/resources/templates/thyme/crowdFundingRegiHistory.html
+++ b/src/main/resources/templates/thyme/crowdFundingRegiHistory.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>펀딩 등록 내역</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
 
-<header th:include="fragment/header :: headerFragment"></header>
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
 
-<div class="container">
-<br><h1 align="center">펀딩 등록 내역</h1><br>
-
-<h2 th:if="${#lists.isEmpty(myCrowdFundingItemList)}">
-	조회결과가 없습니다.
-</h2>
-
-<table th:unless="${#lists.isEmpty(myCrowdFundingItemList)}">
-	<tr>
-		<th>이미지</th>
-		<th>펀딩 간단 설명</th>
-	</tr>
-	<tr th:each="crowdFundingItem : ${myCrowdFundingItemList}">
-		<td><img th:src="@{'/upload/' + ${crowdFundingItem.item.img}}" alt="대표 사진" width="200" height="200" /></td>
-		<td th:text="${crowdFundingItem.shortInfo}">펀딩 간단 설명</td>
-		<td>
-			<form action="" th:action="@{'/crowdFunding/update/{crowdFundingId}'(crowdFundingId=${crowdFundingItem.crowdFundingId})}" method="get">
-	      	<input type="submit"  class="btn btn-primary btn-lg" value="수정하기" >
-	      	</form>
-	      </td>
-		<td>
-			<form action="" th:action="@{'/crowdFunding/delete/{itemId}'(itemId=${crowdFundingItem.item.itemId})}" method="get">
-	      	<input type="submit"  class="btn btn-primary btn-lg" value="삭제하기" >
-	      	</form>
-	    </td>
-	</tr> 
-</table>
+<div align="center" layout:fragment="content">
+	<div class="container">
+	<br><h1 align="center">펀딩 등록 내역</h1><br>
+	
+	<h2 th:if="${#lists.isEmpty(myCrowdFundingItemList)}">
+		조회결과가 없습니다.
+	</h2>
+	
+	<table th:unless="${#lists.isEmpty(myCrowdFundingItemList)}">
+		<tr>
+			<th>이미지</th>
+			<th>펀딩 간단 설명</th>
+		</tr>
+		<tr th:each="crowdFundingItem : ${myCrowdFundingItemList}">
+			<td><img th:src="@{'/upload/' + ${crowdFundingItem.item.img}}" alt="대표 사진" width="200" height="200" /></td>
+			<td th:text="${crowdFundingItem.shortInfo}">펀딩 간단 설명</td>
+			<td>
+				<form action="" th:action="@{'/crowdFunding/update/{crowdFundingId}'(crowdFundingId=${crowdFundingItem.crowdFundingId})}" method="get">
+		      	<input type="submit"  class="btn btn-primary btn-lg" value="수정하기" >
+		      	</form>
+		      </td>
+			<td>
+				<form action="" th:action="@{'/crowdFunding/delete/{itemId}'(itemId=${crowdFundingItem.item.itemId})}" method="get">
+		      	<input type="submit"  class="btn btn-primary btn-lg" value="삭제하기" >
+		      	</form>
+		    </td>
+		</tr> 
+	</table>
+	</div>
 </div>
-
-<footer th:include="fragment/footer :: footerFragment"></footer>
-
-</body>
 </html>
