--- a/src/main/resources/templates/thyme/crowdFundingRegistration.html
+++ b/src/main/resources/templates/thyme/crowdFundingRegistration.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>펀딩 등록 요청</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
 
-<header th:include="fragment/header :: headerFragment"></header>
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
 
-<div class="container">
-<br><h1 align="center">펀딩 등록 요청</h1><br>
-  <div class="row">
-    <div class="col">
-      <p>등록 요청이 완료되었습니다.</p>
-    </div>
-    <div class="col">
-    	<a href="" th:href="@{/myAccount}" class="btn btn-primary">마이페이지로 가기</a><br><br>
-    </div>
-    <hr>
-  </div>
+<div align="center" layout:fragment="content">
+	<div class="container">
+	<br><h1 align="center">펀딩 등록 요청</h1><br>
+	  <div class="row">
+	    <div class="col">
+	      <p>등록 요청이 완료되었습니다.</p>
+	    </div>
+	    <div class="col">
+	    	<a href="" th:href="@{/myAccount}" class="btn btn-primary">마이페이지로 가기</a><br><br>
+	    </div>
+	    <hr>
+	  </div>
+	</div>
 </div>
-
-<footer th:include="fragment/footer :: footerFragment"></footer>
-</body>
 </html>
