--- a/src/main/resources/templates/thyme/crowdFundingUpdateForm.html
+++ b/src/main/resources/templates/thyme/crowdFundingUpdateForm.html
@@ -1,140 +1,144 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>펀딩 수정 화면</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
 
-<header th:include="fragment/header :: headerFragment"></header>
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
 
-<div class="container">
-<br><h1 align="center">펀딩 아이템 수정하기</h1><br>
-	<div class="row-lg-10">
-		<form action="" th:action="@{/crowdFunding/update}" th:object="${crowdFundingItem}" method="post" enctype="multipart/form-data">
+<div align="center" layout:fragment="content">
+	<div class="container">
+	<br><h1 align="center">펀딩 아이템 수정하기</h1><br>
 		<div class="row-lg-10">
-            <div class="form-group">
-            	<input type="hidden" th:value="*{item.account.userid}">
-            	<input type="hidden" th:value="*{crowdFundingId}">
-            	<input type="hidden" th:value="*{item.itemId}">
-				<p>
-			        <label for="title">제목</label>:<br>
-			        <input type="text" id="title" th:field="*{item.title}" />
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-            		<label for="img">대표 이미지</label>:<br>
-				    <input type="text" id="img" th:field="*{item.img}" placeholder="파일 선택">
-				</p>
-            </div> 
-		  </div>
-		  <div class="row-lg-10">
-           <div class="form-group">
-				카테고리: <select class="form-select form-select-sm" th:field="*{item.category.catId}">
-  							<option th:each="category : ${categories}"
-  								th:value="${category.catId}"
-  								th:text="${category.name}">카테고리</option>
-						</select>
-            </div>
-          </div>
-           <div class="row-lg-10">
-            <div class="form-group">
-				카테고리: <select class="form-select form-select-sm" th:field="*{item.childCatId}">
-  							<option th:each="product : ${products}"
-  								th:value="${product.productId}"
-  								th:text="${product.name}">제품군</option>
-						</select>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="name">창작자 이름</label>:<br>
-			        <span th:text=${session.name} th:field="*{item.account.name}"></span>
-			        <span th:text=${session.userId} th:field="*{item.account.userId}"></span>
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="shortInfo">프로젝트 요약</label>:<br>
-			        <textarea id="shortInfo" rows="3" th:field="*{shortInfo}"></textarea>
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="description">프로젝트 상세내용</label>:<br>
-			        <textarea id="description" rows="20" th:field="*{item.description}"></textarea>
-	    		</p>
-            </div>
-		  </div>
-		  <hr>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="targetAmount">목표 금액</label>:<br>
-			        <input type="text" id="targetAmount" th:field="*{targetAmount}" />
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-                <p>
-			        <label for="startDate">펀딩 시작일</label>:<br>
-			        <input type="date" id="startDate" th:field="*{startDate}" />
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-                <p>
-			        <label for="closingDate">펀딩 종료일</label>:<br>
-			        <input type="date" id="closingDate" th:field="*{closingDate}" />
-	    		</p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="productComposition">상품 구성</label>:<br>
-			        <textarea id="productComposition" rows="3" th:field="*{productComposition}"></textarea>
-	    		</p>
-            </div>
-		  </div>
-		  <hr>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="email">이메일</label>:<br>
-			        <input type="text" id="email" th:field="*{item.account.email}" />
-			    </p>
-            </div>
-		  </div>
-		  <div class="row-lg-10">
-            <div class="form-group">
-            	<p>
-			        <label for="account">입금 계좌</label>:<br>
-			        <input type="text" id="account" th:field="*{item.account.accountNum}" />
-			    </p>
-            </div>
-		  </div>
-		  <br>
-		  <div class="row-lg-10">
-		  	<div class="form-group">-->
-		  		<input type="submit" class="btn btn-primary btn-lg" value="저장 하기">
-            </div>
-		  </div>
-		</form> 
-	</div>						
+			<form action="" th:action="@{/crowdFunding/update}" th:object="${crowdFundingItem}" method="post" enctype="multipart/form-data">
+			<div class="row-lg-10">
+	            <div class="form-group">
+	            	<input type="hidden" th:value="*{item.account.userid}">
+	            	<input type="hidden" th:value="*{crowdFundingId}">
+	            	<input type="hidden" th:value="*{item.itemId}">
+					<p>
+				        <label for="title">제목</label>:<br>
+				        <input type="text" id="title" th:field="*{item.title}" />
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+	            		<label for="img">대표 이미지</label>:<br>
+					    <input type="text" id="img" th:field="*{item.img}" placeholder="파일 선택">
+					</p>
+	            </div> 
+			  </div>
+			  <div class="row-lg-10">
+	           <div class="form-group">
+					카테고리: <select class="form-select form-select-sm" th:field="*{item.category.catId}">
+	  							<option th:each="category : ${categories}"
+	  								th:value="${category.catId}"
+	  								th:text="${category.name}">카테고리</option>
+							</select>
+	            </div>
+	          </div>
+	           <div class="row-lg-10">
+	            <div class="form-group">
+					카테고리: <select class="form-select form-select-sm" th:field="*{item.childCatId}">
+	  							<option th:each="product : ${products}"
+	  								th:value="${product.productId}"
+	  								th:text="${product.name}">제품군</option>
+							</select>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="name">창작자 이름</label>:<br>
+				        <span th:text=${session.name} th:field="*{item.account.name}"></span>
+				        <span th:text=${session.userId} th:field="*{item.account.userId}"></span>
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="shortInfo">프로젝트 요약</label>:<br>
+				        <textarea id="shortInfo" rows="3" th:field="*{shortInfo}"></textarea>
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="description">프로젝트 상세내용</label>:<br>
+				        <textarea id="description" rows="20" th:field="*{item.description}"></textarea>
+		    		</p>
+	            </div>
+			  </div>
+			  <hr>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="targetAmount">목표 금액</label>:<br>
+				        <input type="text" id="targetAmount" th:field="*{targetAmount}" />
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	                <p>
+				        <label for="startDate">펀딩 시작일</label>:<br>
+				        <input type="date" id="startDate" th:field="*{startDate}" />
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	                <p>
+				        <label for="closingDate">펀딩 종료일</label>:<br>
+				        <input type="date" id="closingDate" th:field="*{closingDate}" />
+		    		</p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="productComposition">상품 구성</label>:<br>
+				        <textarea id="productComposition" rows="3" th:field="*{productComposition}"></textarea>
+		    		</p>
+	            </div>
+			  </div>
+			  <hr>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="email">이메일</label>:<br>
+				        <input type="text" id="email" th:field="*{item.account.email}" />
+				    </p>
+	            </div>
+			  </div>
+			  <div class="row-lg-10">
+	            <div class="form-group">
+	            	<p>
+				        <label for="account">입금 계좌</label>:<br>
+				        <input type="text" id="account" th:field="*{item.account.accountNum}" />
+				    </p>
+	            </div>
+			  </div>
+			  <br>
+			  <div class="row-lg-10">
+			  	<div class="form-group">-->
+			  		<input type="submit" class="btn btn-primary btn-lg" value="저장 하기">
+	            </div>
+			  </div>
+			</form> 
+		</div>
 </div>
-
-<footer th:include="fragment/footer :: footerFragment"></footer>
-
-</body>
+</html>
 </html>
