--- a/src/main/resources/templates/thyme/crowdFundingView.html
+++ b/src/main/resources/templates/thyme/crowdFundingView.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>펀딩 상세 화면</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
 
-<header th:include="fragment/header :: headerFragment"></header>
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
 
-<div class="container">
-<br><h1 align="center">펀딩 아이템 상세 화면</h1><br>
-  <div class="row">
-  	<hr>
-    <h1>펀딩 제목: <span th:text="${crowdFundingItem.item.title}"></span></h1>
-  </div>	
-  <div class="row">
-    <div class="col">
-      <img th:src="@{'/upload/' + ${crowdFundingItem.item.img}}" alt="대표 사진" width="600" height="400" />
-    </div>
-    <div class="col">
-      <p>모인 금액: <span th:text="${crowdFundingItem.currentSponsoredAmount}"></span></p>
-      <p>마감일: <span th:text="${crowdFundingItem.closingDate}"></span></p>
-      <p>후원자 인원: <span th:text="${crowdFundingItem.numberOfSponsor}"></span></p>
-      <p>프로젝트 간단 요약 내용: <span th:text="${crowdFundingItem.shortInfo}"></span></p>
-      <form action="" th:action="@{/crowdFunding/fund/} + ${crowdFundingItem.crowdFundingId}" method="get">
-      	<input type="submit"  class="btn btn-primary btn-lg" value="펀딩하기" >
-      </form>
-      <br><br>
-    </div>
-    <hr>
-    <p>펀딩 상세 내용:</p>
-    <p><span th:text="${crowdFundingItem.item.description}"></span></p>
-  </div>
+<div align="center" layout:fragment="content">
+	<div class="container">
+	<br><h1 align="center">펀딩 아이템 상세 화면</h1><br>
+	  <div class="row">
+	  	<hr>
+	    <h1>펀딩 제목: <span th:text="${crowdFundingItem.item.title}"></span></h1>
+	  </div>	
+	  <div class="row">
+	    <div class="col">
+	      <img th:src="@{'/upload/' + ${crowdFundingItem.item.img}}" alt="대표 사진" width="600" height="400" />
+	    </div>
+	    <div class="col">
+	      <p>모인 금액: <span th:text="${crowdFundingItem.currentSponsoredAmount}"></span></p>
+	      <p>마감일: <span th:text="${crowdFundingItem.closingDate}"></span></p>
+	      <p>후원자 인원: <span th:text="${crowdFundingItem.numberOfSponsor}"></span></p>
+	      <p>프로젝트 간단 요약 내용: <span th:text="${crowdFundingItem.shortInfo}"></span></p>
+	      <form action="" th:action="@{/crowdFunding/fund/} + ${crowdFundingItem.crowdFundingId}" method="get">
+	      	<input type="submit"  class="btn btn-primary btn-lg" value="펀딩하기" >
+	      </form>
+	      <br><br>
+	    </div>
+	    <hr>
+	    <p>펀딩 상세 내용:</p>
+	    <p><span th:text="${crowdFundingItem.item.description}"></span></p>
+	  </div>
+	</div>
 </div>
-
-<footer th:include="fragment/footer :: footerFragment"></footer>
-
-</body>
 </html>
